--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ rgba(255,255,255,0) 100%);
             <div class="falsehood-date">2025.04.22</div>
         </div>
         <div class="falsehood-source">
-            <i class="fas fa-bullhorn"></i> 날 서울 여의도… 공유하기 공유하기 SNS 퍼가기 카카오톡으로 공유하기 페이스
+            <i class="fas fa-bullhorn"></i> SNS
         </div>
         <div class="falsehood-content">
             김문수 “대학가 반값월세, 공공주택 10% 1인 가구 특별공급”
@@ -482,7 +482,7 @@ rgba(255,255,255,0) 100%);
             <div class="politician-info">
                 <div class="politician-name">
                     <span class="party-indicator ppp-indicator"></span>
-                    확인 필요
+                    국민의힘 의원
                 </div>
                 <div class="party-name-small">국민의힘</div>
             </div>
