--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ rgba(255,255,255,0) 100%);
             <div class="politician-info">
                 <div class="politician-name">
                     <span class="party-indicator ppp-indicator"></span>
-                    확인 필요
+                    김문수
                 </div>
                 <div class="party-name-small">국민의힘</div>
             </div>
